# ChatApplicationUsingC-

./: README.md
5gCORE/: BUILD_GUIDE.md  CMakeLists.txt  DELIVERY_SUMMARY.md  FINAL_REPORT.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_INDEX.md  QUICK_REFERENCE.md  README.md  TEST_REPORT_PCAP.txt
5gCORE/amf/: AMF.cpp  AMF.hpp
5gCORE/common/: Logger.hpp  Message.cpp  Message.hpp  NetworkFunction.cpp  NetworkFunction.hpp  PcapWriter.hpp  Types.hpp
5gCORE/main/: main.cpp  test_single_ue_pcap.cpp
5gCORE/nrf/: NRF.cpp  NRF.hpp
5gCORE/pcf/: PCF.cpp  PCF.hpp
5gCORE/ran/: GNodeB.cpp  GNodeB.hpp
5gCORE/smf/: SMF.cpp  SMF.hpp
5gCORE/udm/: UDM.cpp  UDM.hpp
5gCORE/udr/: UDR.cpp  UDR.hpp
5gCORE/ue/: UserEquipment.cpp  UserEquipment.hpp
5gCORE/upf/: UPF.cpp  UPF.hpp
